@@ -1,3 +1,14 @@
+2012-09-26  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r129521.
+        http://trac.webkit.org/changeset/129521
+        https://bugs.webkit.org/show_bug.cgi?id=97710
+
+        Broke autocomplete on enter_bug.cgi (Requested by abarth on
+        #webkit).
+
+        * committers-autocomplete.js:
+
 2012-09-25  Peter Gal  <galpeter@inf.u-szeged.hu>
 
         committers-autocomplete.js works only with WebKit based browsers
